# thesaurus-management

./: .env.development  .env.production  IMPROVEMENT_SUGGESTIONS.md  KNOWLEDGE_BASE_IMPL.md  OPTIMIZATION_TODO.md  cikuliucheng  package-lock.json  package.json  vitest.config.ts
.claude/commands/: commit.md  help-content.md  release.md
.github/workflows/: release.yml
docs/: ads.md  agent-design.md  feature-optimization-events.md  listing-optimization-plan.md
src/: App.vue  ad-analysis.ts  ad-prompts.ts  ai-service.ts  api.ts  deepseek.ts  error-utils.ts  main.ts  sc-prompts.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: amazon_bsr_crawler.py  amazon_crawler.py  amazon_crawler_playwright.py  amazon_listing_crawler.py  amazon_review_crawler.py  debug_review_page.py  pdf_to_images.py
src-tauri/src/: ai.rs  crawler.rs  db.rs  installer.rs  keychain.rs  knowledge_base.rs  lib.rs  main.rs  notification.rs  scheduler.rs
src/agent/: Agent.ts  Tool.ts  ai-with-tools.ts  index.ts  report-template.ts  types.ts
src/components/: AdOptimizerTab.vue  AddEventDialog.vue  AddMonitoringDialog.vue  AgentTab.vue  ApiKeyDialog.vue  BackupDialog.vue  BigScreenView.vue  ColumnConfigDialog.vue  CompetitorDashboard.vue  CompetitorTaskDialog.vue  DashboardTab.vue  DependencyInstallDialog.vue  GlobalNotification.vue  HelpDialog.vue  KeywordExportDialog.vue  KeywordMonitoringTab.vue  KeywordsTab.vue  KnowledgeBaseTab.vue  MarketResearchDashboard.vue  MarketResearchTaskDialog.vue  OnboardingTour.vue  ProductDialog.vue  ProductSidebar.vue  QuickAddMonitoringDialog.vue  QuickNotes.vue  RankingHistoryChart.vue  ReportHistoryDialog.vue  RootsTab.vue  SettingsDialog.vue  SetupWizardDialog.vue  ShortcutsDialog.vue  SmartCopyTab.vue  Sparkline.vue  TopNavBar.vue  TrafficSettingsDialog.vue  WeeklyReportTab.vue  WordCloud.vue
src/composables/: index.ts  (+5 more)
(+37 files in other folders)
