[package]
name = "thesaurus-management"
version = "0.9.25"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thesaurus_management_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1.19"
parking_lot = "0.12"
tauri-plugin-fs = "2.4.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"

# 关键词监控爬虫依赖 (使用 Python 脚本，通过 std::process::Command 调用)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# HTTP 客户端（用于汇率 API）
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# 知识库文档解析依赖
pdf-extract = "0.7"           # PDF 文本提取
docx-rs = "0.4"               # Word 文档解析
calamine = "0.24"             # Excel 解析
pulldown-cmark = "0.11"       # Markdown 解析
zip = "0.6"                   # PPTX 解压 (PPTX 是 ZIP 格式)
quick-xml = "0.31"            # XML 解析 (用于 PPTX 内容提取)
base64 = "0.22"               # Base64 编码 (用于图片数据传输)
dirs = "5"                    # 获取用户目录 (用于保存图片)

# 密钥链存储 (安全存储 API Key)
keyring = "3"

